<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xadp5.ps2g_app.AboutUs">
    <android.support.v7.widget.Toolbar
        android:id="@+id/aboutUsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/ps2g_header"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="OUR MISSION"
                android:textSize="40dp"
                android:padding="10dp"
                android:background="@drawable/customborder2"/>

            <TextView
                android:id="@+id/mission1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="@color/royalBlue"
                android:text="@string/mission1"
                android:background="@drawable/customborder2"/>

            <TextView
                android:id="@+id/mission2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/mission2"
                android:background="@drawable/customborder2"/>

            <TextView
                android:id="@+id/mission3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/mission3"
                android:background="@drawable/customborder2"/>

            <TextView
                android:id="@+id/mission4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/mission4"
                android:background="@drawable/customborder2"/>

            <TextView
                android:id="@+id/mission5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/mission5"
                android:background="@drawable/customborder2"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
